<resources>
    <string name="app_name">Smart City Travel</string>
    <string name="smart_city_capital">SMART CITY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="google_client_id">Your Google Client ID</string>
    <string name="google_client_secret"Your Google Client Secret</string>
    <string name="signup_with">Signup with</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up_from_here">Sign Up From Here</string>
    <string name="image_of_badshahi_mosque">image of badshahi mosque</string>
    <string name="logo_of_google">logo of google</string>
    <string name="image_of_street">image of street</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="LOGIN_EMAIL_KEY">login_email_key</string>
    <string name="RESET_PASSWORD_EMAIL_KEY">reset_password_email_key</string>
    <string name="PREFERENCE">preference</string>
    <string name="reset_password">Reset your password</string>
    <string name="forget_password">Forget password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="continue_">Continue</string>
    <string name="send_4_digits">We have send 4 digits pin code to</string>
    <string name="pin_code">Pin Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="create_new_password">Create New Password</string>
    <string name="reset_password_">Reset Password</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="SENDBIRD_APP_ID">Your SendBird App Id</string>
    <string name="default_profile_image_url">https://firebasestorage.googleapis.com/v0/b/smart-city-travel-c2eb1.appspot.com/o/profile-images%2Fdefault_profile_image.jpg?alt=media&amp;token=a163a190-dadf-4ba9-831a-06dbd3220629</string>
    <string name="destination_card">You can select desired city you want to visit</string>
    <string name="nearby_card">Get nearby places under desired radius</string>
    <string name="search_card">Generally search any location according to your interest</string>
    <string name="destination_description">You can select desired city you want to visit</string>
    <string name="destination">destination</string>
    <string name="lahore_channel">sendbird_open_channel_15294_6376ff87db29bf9e7ea3fd0e145b71db56322ba1</string>
    <string name="islamabad_channel">sendbird_open_channel_15294_200f1ed3198592726a8a55e81f00caf50483600a</string>
    <string name="nearby_places">nearby\nplaces</string>
    <string name="nearby_description">Get nearby places under desired radius</string>
    <string name="general_search">general\nsearch</string>
    <string name="general_search_description">Generally search any location according to your interest</string>
    <string name="about_team_intro">This Application Develop By Team ZAM Tech Pvt.ltd</string>
    <string name="about_us_intro">The best hotels available nearby and the restaurants to have food. Therefore, our app is going to provide all information under one roof so that they can have better experience in that city.</string>
    <string name="lahore">Lahore</string>
    <string name="islamabad">Islamabad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="famous_spot">Famous Spot</string>
    <string name="restaurant">Restaurant</string>
    <string name="recommendation">Recommendation</string>
    <string name="popular">Popular</string>
    <string name="hotel">Hotel</string>
    <string name="account_created_successfully">Account created Successfully</string>
    <string name="successful_message">Successful Message Here</string>
    <string name="message_here">Message Here</string>
    <string name="title_here">Title Here</string>
    <string name="_5">/5</string>
    <string name="_0_0">0.0</string>
    <string name="write_a_review">Write a review</string>
    <string name="write_a_review_">Write a review...</string>
    <string name="submit">submit</string>
    <string name="create_account">Create Account</string>
    <string name="edit_your_review">Edit your review</string>
    <string name="see_more">see more</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="see_all_reviews">see all reviews</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="favorites">Favorites</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="send_receive">SEND RECEIVE</string>
    <string name="datetime">DateTime</string>
    <string name="time">time</string>
    <string name="type_message">Type Message...</string>
    <string name="username">userName</string>
    <string name="search">Search</string>
    <string name="no_result_found">No result found</string>
    <string name="no_connection">No Connection</string>
    <string name="search_place_by_name">Search Place by Name</string>
    <string name="city">City</string>
    <string name="place_name">Place Name</string>
    <string name="_3">3</string>
    <string name="km">Km</string>
    <string name="location_settings">Location Settings</string>
    <string name="allow_location_permission">Allow Location Permission</string>
    <string name="navigate">Navigate</string>
    <string name="navigation">Navigation</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="no_nearby_place_to_show">No nearby place to show</string>
    <string name="retry">Retry</string>
    <string name="failed">failed</string>
    <string name="this_feature_is_not_available_in_your_area">This feature is not available in your area</string>
    <string name="enable_location_settings">Enable Location Settings</string>
    <string name="enable_location_settings_">Enable Location Settings</string>
    <string name="_0">0</string>
</resources>