<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/message_left"
    android:maxWidth="300dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/userNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/messageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:text="@string/send_receive"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>