<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background" />

    </RelativeLayout>

    <include layout="@layout/logo_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/white"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="19sp" />


    <RelativeLayout
        android:id="@+id/forgetPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/forgetPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/grey"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/restPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/forgetPasswordTxt"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/reset_password"
            android:textColor="@color/light_orange"
            android:textSize="13sp"
            android:theme="@style/WhiteRippleEffectTheme" />
    </RelativeLayout>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/marginRight"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:layout_below="@id/forgetPasswordLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:alpha="0.6"
        app:dividerColor="@color/white" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/marginLeft"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:layout_below="@id/forgetPasswordLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:alpha="0.6"
        app:dividerColor="@color/white" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetPasswordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/or"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/signInWithTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_with"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/googleImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/signInWithTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/logo_of_google"
        android:focusable="true"
        android:src="@drawable/ic_google"
        android:theme="@style/WhiteRippleEffectTheme"
        app:shapeAppearanceOverlay="@style/CircularImage" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/noAccountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/signUpHereTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/noAccountTxt"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up_from_here"
            android:textStyle="bold"
            android:theme="@style/WhiteRippleEffectTheme" />

    </RelativeLayout>

    <include
        android:id="@+id/loading_progress_bar"
        layout="@layout/loading_progress_bar" />

</RelativeLayout>