<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Activities.NearByPlacesActivity">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/noPlaceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_nearby_place_to_show"
        android:textColor="@color/default_black"
        android:textSize="15sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PlaceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLayout"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2" />

    <RelativeLayout
        android:id="@+id/rangeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rangeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:backgroundTint="@color/light_white"
            app:borderWidth="0dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp">

            <TextView
                android:id="@+id/rangeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rangeTxt"
                android:layout_centerHorizontal="true"
                android:text="@string/km"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/locationPermissionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/allow_location_permission"
        android:visibility="gone" />

    <Button
        android:id="@+id/locationSettingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationPermissionBtn"
        android:layout_centerInParent="true"
        android:text="@string/location_settings"
        android:visibility="gone" />

    <include
        android:id="@+id/CheckConnectionLayout"
        layout="@layout/no_connection" />

</RelativeLayout>