<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/message_right"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/userNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/messageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1dp"
                android:text="@string/send_message"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/errorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageLayout"
            android:layout_alignEnd="@id/messageLayout"
            android:layout_marginTop="2dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorImg"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/errorTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/errorImg"
                android:text="@string/failed"
                android:textColor="@color/default_black"
                android:textSize="13sp" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>