<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Activities.EmailActivity">

    <include
        android:id="@+id/resetPasswordBackground"
        layout="@layout/reset_password_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/logoLayout"
        layout="@layout/logo" />

    <TextView
        android:id="@+id/resetPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/reset_your_password"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPasswordTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/emailLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_orange_2"
        android:text="@string/continue_"
        android:textSize="19sp" />

    <include
        android:id="@+id/loading_progress_bar"
        layout="@layout/loading_progress_bar" />

</RelativeLayout>